# setup_python_projects

./: .gitignore  .prospector.yaml  README.md  pyproject.toml
doc/: README.md
scripts/: README.md
src/: README.md
tests/: README.md
