[tool.poetry]
name = "setup_python_projects"
version = "0.1.0"
description = "setup for python projects"
authors = ["Iago Franco <pattasiago@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
blue = "^0.9.1"
isort = "^5.10.1"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
